--- a/style.css
+++ b/style.css
@@ -46,3 +46,30 @@ p {
   font-size: 14px;
   color: #e31b6d;
 }
+
+#comment-wall {
+  margin-top: 50px;
+}
+
+#comment-wall h2 {
+  color: #333;
+}
+
+#comment-form {
+  margin-bottom: 20px;
+}
+
+#comment-input {
+  width: 300px;
+  height: 30px;
+  padding: 5px;
+}
+
+#comments-list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.comment {
+  margin-bottom: 10px;
+}
