--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ p {
   color: #e31b6d;
 }
 
-#comment-wall {
+/* #comment-wall {
   margin-top: 50px;
 }
 
@@ -72,4 +72,4 @@ p {
 
 .comment {
   margin-bottom: 10px;
-}
+} */
